<resources>
    <string name="app_name">Enough</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="top_newsnav">Top News</string>
    <string name="settings_subnav">Settings</string>
    <string name="help_nav">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="organization">Organization</string>
    <string name="organization_website_link">Organization Website Link</string>
    <string name="movie">Movie</string>
    <string name="travel">Travel</string>
    <string name="health">Health</string>
    <string name="help_frag_desc_tv">Emergency Message</string>
    <string name="distress_message">Hey we\'ve talked about this before, I need help now</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="button_save">Save</string>

</resources>
