<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_topnews"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/top_newsnav"
        />
    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/movie"/>
    <item
        android:id="@+id/nav_travel"
        android:icon="@drawable/ic_card_travel_black_24dp"
        android:title="@string/travel"/>
    <item
        android:id="@+id/nav_health"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/health"/>

  </group>

  <item android:title="@string/settings_subnav">
    <menu>
      <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_live_help_black_24dp"
        android:title="@string/help_nav" />
    </menu>
  </item>


</menu>
